--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,57 @@
-flask
-flask_sqlalchemy
-flask_login
-flask-bcrypt
-flask_wtf
-flask_caching
-flask_migrate
-python-dotenv
-pillow
-flask_login
-flask_wtf
+alembic==1.14.1
+aniso8601==10.0.0
+antiorm==1.2.1
+bcrypt==4.2.1
+black==25.1.0
+blinker==1.9.0
+cachelib==0.13.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+db==0.1.1
+dnspython==2.7.0
+email_validator==2.2.0
+Faker==37.0.2
+flake8==7.1.2
+Flask==3.1.0
+Flask-Bcrypt==1.0.1
+Flask-Caching==2.3.1
+Flask-Cors==5.0.0
+Flask-JWT-Extended==4.7.1
+Flask-Login==0.6.3
+Flask-Mail==0.10.0
+Flask-Migrate==4.1.0
+Flask-RESTful==0.3.10
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+greenlet==3.1.1
+idna==3.10
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.5
+Mako==1.3.9
+MarkupSafe==3.0.2
+mccabe==0.7.0
+mypy-extensions==1.0.0
+packaging==24.2
+pathspec==0.12.1
+pillow==11.2.1
+platformdirs==4.3.6
+pluggy==1.5.0
+psycopg2==2.9.10
+psycopg2-binary==2.9.9
+pycodestyle==2.12.1
+pyflakes==3.2.0
+PyJWT==2.10.1
+pytest==8.3.4
+python-dotenv==1.1.0
+pytz==2024.2
+requests==2.32.3
+six==1.17.0
+SQLAlchemy==2.0.29
+sqlalchemy-serializer==1.4.22
+typing_extensions==4.12.2
+tzdata==2025.2
+urllib3==2.3.0
+Werkzeug==3.1.3
+WTForms==3.2.1
