--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ antiorm==1.2.1
 bcrypt==4.2.1
 black==25.1.0
 blinker==1.9.0
+boto3==1.38.27
+botocore==1.38.27
 cachelib==0.13.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -23,12 +25,15 @@ Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
+Flask-Uploads==0.2.1
 Flask-WTF==1.2.2
 greenlet==3.1.1
+gunicorn==23.0.0
 idna==3.10
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
+jmespath==1.0.1
 Mako==1.3.9
 MarkupSafe==3.0.2
 mccabe==0.7.0
@@ -44,9 +49,11 @@ pycodestyle==2.12.1
 pyflakes==3.2.0
 PyJWT==2.10.1
 pytest==8.3.4
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2024.2
 requests==2.32.3
+s3transfer==0.13.0
 six==1.17.0
 SQLAlchemy==2.0.29
 sqlalchemy-serializer==1.4.22
