--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 UPLOAD_FOLDER=static/uploads
 ALLOWED_EXTENSIONS={'png', 'jpg', 'jpeg', 'gif'}
 MAX_CONTENT_LENGTH=16777216 # 16MB
+B2_KEY_ID=005313919eeaa470000000001
+B2_APP_KEY=legit-access
+B2_BUCKET_NAME=legit-collections
