--- a/requirements.txt
+++ b/requirements.txt
@@ -60,5 +60,6 @@ sqlalchemy-serializer==1.4.22
 typing_extensions==4.12.2
 tzdata==2025.2
 urllib3==2.3.0
+waitress==3.0.2
 Werkzeug==3.1.3
 WTForms==3.2.1
