--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ MAX_CONTENT_LENGTH=16777216 # 16MB
 B2_KEY_ID=005313919eeaa470000000001
 B2_APP_KEY=legit-access
 B2_BUCKET_NAME=legit-collections
+B2_BASE_URL=https://f002.backblazeb2.com/file/
