--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ MAX_CONTENT_LENGTH=16777216 # 16MB
 B2_KEY_ID=005313919eeaa470000000001
 B2_APP_KEY=legit-access
 B2_BUCKET_NAME=legit-collections
-B2_BASE_URL=https://s3.us-east-005.backblazeb2.com
+B2_ENDPOINT_URL=https://s3.us-east-005.backblazeb2.com
