--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 UPLOAD_FOLDER=static/uploads
 ALLOWED_EXTENSIONS={'png', 'jpg', 'jpeg', 'gif'}
 MAX_CONTENT_LENGTH=16777216 # 16MB
-B2_KEY_ID=005313919eeaa470000000001
-B2_APP_KEY=legit-access
+B2_KEY_ID=005313919eeaa470000000004
+B2_APP_KEY=K005QPe9Dy5UvxXOof3+jEIcEQx9FBo
 B2_BUCKET_NAME=legit-collections
-B2_ENDPOINT_URL=https://s3.us-east-005.backblazeb2.com
+# B2_ENDPOINT_URL=https://s3.us-east-005.backblazeb2.com
