--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ MarkupSafe==3.0.2
 SQLAlchemy==2.0.29
 Werkzeug==3.1.3
 WTForms==3.2.1
+email-validator==2.1.0
 python-dotenv==1.1.0
 alembic==1.16.1
 pillow==11.2.1
